--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <!-- Plotly.js -->
-  src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 
 <body>
