--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
 <body>
   
   <div id="myDiv"><!-- Plotly chart will be drawn inside this DIV --></div>
-  <script src="https://robbierobinette.github.io/election-sim/bars.js"></script>
+  <script src="bars.js"></script>
 </body>
