--- a/rcv.html
+++ b/rcv.html
@@ -14,7 +14,7 @@
         body {
             font-family: Arial, Helvetica, sans-serif;
             background-color: #333;
-            color: #888;
+            color: #aaa;
         }
 
         /* Style the header */
