--- a/rcv.html
+++ b/rcv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>CSS Template</title>
+    <title>Ranked Choice Voting Simulation</title>
     <script src="https://unpkg.com/mathjs/dist/math.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <meta charset="utf-8">
