--- a/rcv.html
+++ b/rcv.html
@@ -4,6 +4,15 @@
     <title>Ranked Choice Voting Simulation</title>
     <script src="https://unpkg.com/mathjs/dist/math.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+            crossorigin="anonymous">
+
+    </script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
+            integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
+            crossorigin="anonymous">
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
@@ -59,6 +68,17 @@
 
 
 </body>
+<script src="Slider.js"></script>
+<script src="Selector.js"></script>
+<script src="Button.js"></script>
+<script src="Checkbox.js"></script>
+<script src="ConfigurationArea.js"></script>
+<script src="RCVElection.js"></script>
+<script src="Voter.js"></script>
+<script src="Candidate.js"></script>
+<script src="CandidateArea.js"></script>
+<script src="PopulationGroup.js"></script>
+<script src="PopulationArea.js"></script>
 <script src="rcv.js"></script>
 </html>
 
