Create Slider Toggles, add empty Primary tab.

--- a/rcv.html
+++ b/rcv.html
@@ -58,7 +58,7 @@
     </div>
     <div id="candidates_div">
     </div>
-    <div id="rounds">
+    <div id="election_area">
     </div>
 </div>
 
@@ -72,8 +72,12 @@
 <script src="Selector.js"></script>
 <script src="Button.js"></script>
 <script src="Checkbox.js"></script>
+<script src="Tabs.js"></script>
+<script src="SlideToggle.js"></script>
 <script src="ConfigurationArea.js"></script>
 <script src="RCVElection.js"></script>
+<script src="PrimaryElection.js"></script>
+<script src="ElectionArea.js"></script>
 <script src="Voter.js"></script>
 <script src="Candidate.js"></script>
 <script src="CandidateArea.js"></script>
