switch to scalajs version

--- a/rcv.html
+++ b/rcv.html
@@ -68,21 +68,7 @@
 
 
 </body>
-<script src="Slider.js"></script>
-<script src="Selector.js"></script>
-<script src="Button.js"></script>
-<script src="Checkbox.js"></script>
-<script src="Tabs.js"></script>
-<script src="SlideToggle.js"></script>
-<script src="ConfigurationArea.js"></script>
-<script src="RCVElection.js"></script>
-<script src="PrimaryElection.js"></script>
-<script src="ElectionArea.js"></script>
-<script src="Voter.js"></script>
-<script src="Candidate.js"></script>
-<script src="CandidateArea.js"></script>
-<script src="PopulationGroup.js"></script>
-<script src="PopulationArea.js"></script>
-<script src="rcv.js"></script>
+<script src="rcvsimulationpage-fastopt.js"></script>
+<script src="rcvsimulationpage-jsdeps.js"></script>
 </html>
 
