use fullOpt version

--- a/rcv.html
+++ b/rcv.html
@@ -15,7 +15,7 @@
 </div>
 <!-- Include Scala.js compiled code -->
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<script type="text/javascript" src="rcvsimulationpage-fastopt.js"></script>
+<script type="text/javascript" src="rcvsimulationpage-opt.js"></script>
 <script type="text/javascript" src="rcvsimulationpage-jsdeps.js"></script>
 </body>
 </html>
