--- a/c-sim.html
+++ b/c-sim.html
@@ -1,4 +1,47 @@
 <!DOCTYPE html>
+<style>
+
+div.tooltip {
+    position: absolute;
+    text-align: center;
+    padding: 2px;
+    font: 12px sans-serif;
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
+}
+.button:focus, .button:active, .button.active, .button:focus:active {
+  background-image: none;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+.button {
+    box-shadow: none;
+}
+.button {
+<!--	box-shadow:inset 0px 1px 0px 0px #54a3f7;-->
+    -webkit-box-shadow: none;
+	background-color:#86858a;
+	border-radius:9px;
+	border:1px solid #124d77;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:14px;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #154682;
+}
+.button.pressed {
+	background:linear-gradient(to bottom, #007dc1 5%, #0061a7 100%);
+}
+
+
+
+</style>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,6 +52,8 @@
 <!-- Include Scala.js compiled code -->
 <link rel="stylesheet" type="text/css" href="help-tips.css">
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script src="https://d3js.org/d3.v5.js"></script>
+<script src="https://unpkg.com/topojson@3"></script>
 <div id="page">
 
 
