--- a/c-sim.html
+++ b/c-sim.html
@@ -53,6 +53,7 @@ div.tooltip {
 <link rel="stylesheet" type="text/css" href="help-tips.css">
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <script src="https://d3js.org/d3.v5.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/d3-legend/1.1.0/d3-legend.js"></script>
 <script src="https://unpkg.com/topojson@3"></script>
 <div id="page">
 
