update to current rcvsjs

--- a/rcv.html
+++ b/rcv.html
@@ -14,9 +14,11 @@
 
 </div>
 <!-- Include Scala.js compiled code -->
+<link rel="stylesheet" type="text/css" href="help-tips.css">
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<script type="text/javascript" src="rcvsimulationpage-opt.js"></script>
-<script type="text/javascript" src="rcvsimulationpage-jsdeps.js"></script>
+<script type="text/javascript" src="RCVSimulationPage/target/scala-2.12/scalajs-bundler/main/rcvsimulationpage-fastopt-library.js"></script>
+<script type="text/javascript" src="RCVSimulationPage/target/scala-2.12/scalajs-bundler/main/rcvsimulationpage-fastopt-loader.js"></script>
+<script type="text/javascript" src="RCVSimulationPage/target/scala-2.12/scalajs-bundler/main/rcvsimulationpage-fastopt.js"></script>
 </body>
 </html>
 
