--- a/c-sim.html
+++ b/c-sim.html
@@ -60,8 +60,9 @@ div.tooltip {
 
 </div>
 </script>
-<script type="text/javascript" src="cSim/target/scala-2.12/csim-fastopt.js"></script>
-<script type="text/javascript" src="cSim/target/scala-2.12/csim-jsdeps.js"></script>
+<script type="text/javascript" src="cSim/target/scala-2.12/scalajs-bundler/main/csim-fastopt-library.js"></script>
+<script type="text/javascript" src="cSim/target/scala-2.12/scalajs-bundler/main/csim-fastopt-loader.js"></script>
+<script type="text/javascript" src="cSim/target/scala-2.12/scalajs-bundler/main/csim-fastopt.js"></script>
 </body>
 </html>
 </body>
