no known changes to iframe content

--- a/VoterWidget.html
+++ b/VoterWidget.html
@@ -43,6 +43,7 @@
         function doNothing(s) {
             console.log(s)
         }
+        console.log("test...")
         var pds = PolarizationDataStory("visDiv", "overlayDiv", doNothing)
         pds.update(2000, 0)
 </script>
