update title for explorer widget

--- a/PDSWidget.html
+++ b/PDSWidget.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Simulated United States House of Representatives Election</title>
+    <title>BetterChoices Election Simulation Explorer</title>
 
 </head>
 <body>
